objects/Passkey_Contracted_Price__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Business_Mix__c</fullName>
        <label>Group Business Mix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Chain_Affiliation__c</fullName>
        <label>Lanyon Chain Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Per_Key__c</fullName>
        <label>Price Per Key</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Passkey Contracted Price</label>
    <nameField>
        <label>Passkey Contracted Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passkey Contracted Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Lanyon_Chain_Affiliation__c</columns>
        <columns>Price_Per_Key__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>